[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
noise = "0.8.2"
proconio = "0.4.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
svg = "0.13.0"
palette = { version = "0.6.1", features = ["named_gradients"] }
once_cell = "1.17.0"
raqote = { version = "0.8.2", default-features = false, features = ["png"] }
rand_distr = "0.4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.81"
getrandom = { version = "0.2.7", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"
features = ['ImageData', 'CanvasRenderingContext2d']

[profile.dev]
overflow-checks = false

[profile.test]
overflow-checks = false

[lib]
crate_type = ["cdylib", "rlib"]
